--- a/PDF_Title_to_Filename/PDF_Title_to_Filename.csproj
+++ b/PDF_Title_to_Filename/PDF_Title_to_Filename.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
