バグ修正: AboutWindowの例外処理強化、非同期処理の改善、依存性注入の設定追加、バージョン情報の更新、アセンブリ情報の修正を実施。

--- a/PDF_Title_to_Filename/PDF_Title_to_Filename.csproj
+++ b/PDF_Title_to_Filename/PDF_Title_to_Filename.csproj
@@ -10,7 +10,7 @@
 
     <AssemblyTitle>PDF Title to Filename</AssemblyTitle>
     <AssemblyDescription>PDFファイルのタイトルからファイル名を自動生成するアプリケーション</AssemblyDescription>
-    <AssemblyCompany>Your Company</AssemblyCompany>
+    <AssemblyCompany>fa-yoshinobu</AssemblyCompany>
     <AssemblyProduct>PDF Title to Filename</AssemblyProduct>
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <FileVersion>1.0.2.0</FileVersion>
